--- a/Where-Coffee-backend-app/src/main/resources/application.properties
+++ b/Where-Coffee-backend-app/src/main/resources/application.properties
@@ -15,3 +15,4 @@ netcracker.app.areas = \u0410\u0434\u043C\u0438\u0440\u0430\u043B\u0442\u0435\u0
 netcracker.app.results = 1
 netcracker.app.updateURL = https://search-maps.yandex.ru/v1/?text=\u043A\u043E\u0444\u0435,\u0421\u0430\u043D\u043A\u0442-\u041F\u0435\u0442\u0435\u0440\u0431\u0443\u0440\u0433,%s&results=%d&type=biz&lang=ru_RU&apikey=%s
 netcracker.app.mapAPI = 0a69d84f-bfcd-4904-a319-0b0cb3971545
+netcracker.app.itemsOnPage = 15
