added cafeteria_perks table

--- a/Where-Coffee-backend-app/src/main/resources/application.properties
+++ b/Where-Coffee-backend-app/src/main/resources/application.properties
@@ -8,6 +8,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.schema-locations = classpath:db/schema.sql
+#spring.sql.init.separator="''"
+spring.sql.init.mode = always
 
 netcracker.app.jwtSecret= SecretKey
 netcracker.app.jwtExpirationMs= 86400000
