--- a/Where-Coffee-backend-app/src/main/resources/application.properties
+++ b/Where-Coffee-backend-app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.liquibase.changeLog=classpath:db/changelog/db.changelog-master.yaml
-spring.liquibase.enabled = true
+spring.liquibase.enabled = false
 
 spring.datasource.username=postgres
 spring.datasource.password=qwerty
