trans to Docker and external database

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,9 +1,11 @@
 spring.liquibase.changeLog=classpath:db/changelog/db.changelog-master.yaml
-spring.liquibase.enabled = false
+spring.liquibase.enabled = true
 
 spring.datasource.username=postgres
-spring.datasource.password=qwerty
-spring.datasource.url=jdbc:postgresql://localhost:5432/coffee_shops
+spring.datasource.password=cWXSlpzlF9jnbRGw
+spring.datasource.url=jdbc:postgresql://db.dvyfknyluqlbeuzfhipa.supabase.co:5432/postgres
+#spring.datasource.password=qwerty
+#spring.datasource.url=jdbc:postgresql://localhost:5432/coffee_shops
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database=postgresql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
@@ -12,6 +14,7 @@ spring.sql.init.schema-locations = classpath:db/schema.sql
 #spring.sql.init.separator="''"
 spring.sql.init.mode = always
 
+#server.port = 8080
 netcracker.front.api = http://localhost:4200
 
 netcracker.app.jwtSecret= SecretKey
